update-manager (1:0.142) UNRELEASED; urgency=low

  [ Michael Vogt ]
  * check-new-release-gtk: 
    - fix "ask me later" button time
  * UpdateManager/Core/MetaRelease.py,
    UpdateManager/Core/utils.py:
    - update for python-apt 0.8 API, add tests
  * check-new-release-gtk:
    - remove no longer needed warnings filter

  [ Brian Murray ]
  * string fix for 'is aborted now' to 'has aborted'
  * fix in debian/control

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 02 Jun 2010 10:01:21 +0200

update-manager (1:0.141) maverick; urgency=low

  * UpdateManager/backend/__init__.py:
    - switch to aptdaemon as install backend by default (unless
      the user has UPDATE_MANAGER_FORCE_BACKEND_SYNAPTIC in his
      environment)
    - merged lp:~glatzor/update-manager/ubuntu-glatzor (many thanks!)
  * DistUpgrade/DistUpgradeController.py:
   - use pockets from DistUpgrade.cfg instead of hard-coding them
  * tests/test_sources_list.py:
    - update tests
  * UpdateManager/Core/utils.py:
    - fix url_downloadable and add tests, based on the patch from
      Paulo Albuquerque, many thanks (LP: #396187)
  * UpdateManager/UpdateManager.py:
    - fix typo (thanks to seb128)
  * DistUpgrade/mirrors.cfg:
    - support upgrades when sources.list uses the new
      mirror://mirrors.ubuntu.com/mirrors.txt 
      uri
  * UpdateManager/GtkProgress.py:
    - do not open a cache open progress window, instead show the
      progress inline in the window

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 31 May 2010 15:14:22 +0200

update-manager (1:0.140) maverick; urgency=low

  * DistUpgrade/removal_blacklist.cfg:
    - remove gobuntu-desktop from the removal blacklist
  * DistUpgrade/DistUpgradeController.py:
    - start apport only, do not modify any conffile (all versions
      of apport we upgrade from support this now)
  * UpdateManager/UpdateManager.py:
    - fix crash when format string has the wrong number of arguments
      (LP: #569469)