@@ -4,8 +4,12 @@ update-manager (1:0.142) UNRELEASED; urgency=low
   * check-new-release-gtk: 
     - fix "ask me later" button time
   * UpdateManager/Core/MetaRelease.py,
-    UpdateManager/Core/utils.py:
-    - update for python-apt 0.8 API, add tests
+    UpdateManager/Core/utils.py,
+    UpdateManager/Core/MyCache.py,
+    UpdateManager/Core/UpdateList.py,
+    UpdateManager/GtkProgress.py,
+    UpdateManager/UpdateManager.py:
+    - update for python-apt 0.8 API, add tests (LP: #591236)
   * check-new-release-gtk:
     - remove no longer needed warnings filter
 
